INTWEB-245, fix scrollbar issue for win

--- a/app/film-exchange/film-exchange.less
+++ b/app/film-exchange/film-exchange.less
@@ -130,6 +130,9 @@
             margin-bottom: 10px;
         }
     }
+    .table-header{
+        padding-right: 10px;
+    }
     .footer{
         position: absolute;
         bottom: 0px;
